Bug 471041 - Aurorae window decorations don't appear properly
Summary: Aurorae window decorations don't appear properly
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: aurorae (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR major
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2023-06-14 22:48 UTC by Nicolas Fella
Modified: 2023-07-01 12:20 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Fella 2023-06-14 22:48:48 UTC
STEPS TO REPRODUCE
1. Go to Systemsettings > Window Decoration
2. Enable Plastik

OBSERVED RESULT
No decoration is visible. It can be interacted with, so it's there, just not rendered properly

EXPECTED RESULT
Glorious Plastik


SOFTWARE/OS VERSIONS
KDE Plasma Version: master
KDE Frameworks Version: master
Qt Version: 6.5.1

ADDITIONAL INFORMATION
Wayland
Comment 1 Nate Graham 2023-06-20 19:12:50 UTC
Can confirm; seems to affect all Aurorae window decorations.
Comment 2 Bug Janitor Service 2023-06-28 08:34:55 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/4218
Comment 3 David Edmundson 2023-07-01 12:20:44 UTC
Git commit ced95f536cf4119e2c3a7579636fe27290d94486 by David Edmundson.
Committed on 01/07/2023 at 11:47.
Pushed by davidedmundson into branch 'master'.

Adapt offscreenquickview to Qt6 changes

Qt6 documentation states:

"Note: When using this window in combination with QQuickRenderControl,
the result of this function is an empty image, unless the software
backend is in use. "

We support a mode of using openGL rendering but then exporting as pixmap
images for Aurorae. In this case we should simply grab data from our
FBO.

M  +6    -1    src/libkwineffects/kwinoffscreenquickview.cpp

https://invent.kde.org/plasma/kwin/-/commit/ced95f536cf4119e2c3a7579636fe27290d94486